--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@ current: index
                 <a class="material-icons text-dark pr-2 mr-2" href="#" data-toggle="modal" data-target="#exampleModalCenter">                
                     remove_red_eye               
                 </a>
-                <a class="material-icons text-dark pl-2" href="#">               
+                <a class="material-icons text-dark pl-2" href="#" data-toggle="modal" data-target="#EditModalLong">               
                         edit               
                 </a>
             </td>
@@ -246,28 +246,208 @@ current: index
     </div>
   </div>
 
-  <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-    Launch demo modal
-  </button>
+ 
   
-  <!-- Modal -->
+  <!-- Add admin Modal -->
   <div class="modal fade" id="ModalLong" tabindex="-1" role="dialog" aria-labelledby="ModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="ModalLongTitle">Modal title</h5>
+        <div class="modal-header border-bottom-0">
+          <h4 class="modal-title" id="ModalLongTitle">New Admin</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          ...
+          <!-- 表單開始 -->
+          <form>
+            <h5 class="account" >Account</h5>
+            <div class="form-group">
+              <label for="InputName">Name</label>
+              <input type="text" class="form-control border-secondary" id="InputName" placeholder="Name">
+            </div>
+            <div class="form-group border-bottom mb-4">
+              <label for="InputEmail1">Email</label>
+              <input type="email" class="form-control mb-4 border-secondary" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+            </div>
+            <!-- <div class="form-group">
+              <label for="InputPassword1">Password</label>
+              <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+            </div> -->
+            <!-- <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="Check1">
+              <label class="form-check-label" for="Check1">Check me out</label>
+            </div> -->
+            <div class="border-bottom mb-4">
+              <h5 class="verification" >Verification</h5>
+              <p class="d-flex text-danger">
+                <span class="material-icons mr-2">
+                  warning 
+                </span>
+                unverified
+              </p>
+              <button type="button" class="btn btn-outline-success custom-border-light w-100 mb-4">Send Verification Mail</button>
+            </div>
+            <div class="form-group border-bottom my-4">
+              <h5 class="acc-level" >Access Level</h5>
+              <!-- <label for="FormControlSelect1">Access Level</label> -->
+              <select class="form-control mb-4 border-secondary" id="FormControlSelect1">
+                <option selected>-Choose access level-</option>
+                <option value="admin">Admin</option>
+                <option value="extended">Extended</option>
+                <option value="basic">Basic</option>
+                <option value="user">User</option>
+                <option value="Tester">Tester</option>                
+              </select>
+            </div>
+            <h5 class="custom-acc" >Custom Access</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+              <label class="form-check-label" for="defaultCheck1">
+                lecture
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+              <label class="form-check-label" for="defaultCheck2">
+                Coupon
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck3" >
+              <label class="form-check-label" for="defaultCheck3">
+                Message
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck4">
+              <label class="form-check-label" for="defaultCheck4">
+                Setting
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck5" >
+              <label class="form-check-label" for="defaultCheck5">
+                task menu
+              </label>
+            </div>
+          </form>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="modal-footer border-top-0">
+          <input class="btn custom-btn-cancel btn-outline-success mr-4" type="button" value="Cancel">
+          <input class="btn custom-btn-success" type="submit" value="Add">
+        </div>       
+      </div>
+    </div>
+  </div>
+
+  <!-- Edit admin Modal -->
+  <div class="modal fade" id="EditModalLong" tabindex="-1" role="dialog" aria-labelledby="EditModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header border-bottom-0">
+          <h4 class="modal-title" id="EditModalLongTitle">Edit Admin</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <!-- 表單開始 -->
+          <form>
+            <h5 class="account" >Account</h5>
+            <div class="form-group">
+              <label for="InputName" class="mb-1">Name</label>
+              <input type="text" value="Emir Wicks" class="form-control" id="InputName" placeholder="Name" disabled>
+            </div>
+            <div class="form-group border-bottom mb-4">
+              <label for="InputEmail1" class="mb-1">Email</label>
+              <input type="email" value="emir.wicks@mail.com" class="form-control mb-4" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email" disabled>
+              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+            </div>
+            <!-- <div class="form-group">
+              <label for="InputPassword1">Password</label>
+              <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+            </div> -->
+            <!-- <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="Check1">
+              <label class="form-check-label" for="Check1">Check me out</label>
+            </div> -->
+            <div class="border-bottom mb-4">
+              <h5 class="verification" >Verification</h5>
+              <p class="d-flex  justify-content-between align-items-center text-dark font-weight-bold">
+                <span class="d-flex">
+                  <i class="material-icons mr-2 text-success">
+                    check_circle 
+                  </i>
+                  Verified
+                </span>
+                <small>2020/4/12</small>
+              </p>
+              <button type="button" class="btn btn-outline-secondary w-100 mb-4" disabled>Send Verification Mail</button>
+            </div>
+            <div class="form-group border-bottom my-4">
+              <h5 class="acc-level" >Access Level</h5>
+              <!-- <label for="FormControlSelect1">Access Level</label> -->
+              <select class="form-control mb-4 border-secondary" id="FormControlSelect1">
+                <option value="">-Choose access level-</option>
+                <option value="admin" selected>Admin</option>
+                <option value="extended">Extended</option>
+                <option value="basic">Basic</option>
+                <option value="user">User</option>
+                <option value="Tester">Tester</option>                
+              </select>
+            </div>
+            <h5 class="custom-acc" >Custom Access</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+              <label class="form-check-label" for="defaultCheck1">
+                lecture
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+              <label class="form-check-label" for="defaultCheck2">
+                Coupon
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck3" >
+              <label class="form-check-label" for="defaultCheck3">
+                Message
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="defaultCheck4">
+              <label class="form-check-label" for="defaultCheck4">
+                Setting
+              </label>
+            </div>
+            <div class="form-check border-bottom mb-4">
+              <input class="form-check-input " type="checkbox" value="" id="defaultCheck5" >
+              <label class="form-check-label mb-4" for="defaultCheck5">
+                task menu
+              </label>
+            </div>
+            
+            <div class="mb-4">
+              <h5 class="deactivate-acc" >Deactivate Account</h5>
+              <p class="d-flex text-danger font-weight-bold">
+                <span class="material-icons mr-2">
+                  warning 
+                </span>
+                This cannot be undone!
+              </p>
+              <button type="button" class="btn btn-outline-danger w-100 mb-4">Deactivate This Account</button>
+            </div>
+
+          </form>
+        </div>
+        
+        <div class="modal-footer border-top-0">
+          <input class="btn custom-btn-cancel btn-outline-success mr-4" type="button" value="Cancel">
+          <input class="btn custom-btn-success" type="submit" value="Update">
+        </div>       
       </div>
     </div>
   </div>
