--- a/admin.html
+++ b/admin.html
@@ -215,8 +215,8 @@ current: index
                         <p class="mb-2">
                             <mark>verified</mark>
                         </p>
-                        <a class="table-view material-icons" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                            keyboard_arrow_down
+                        <a class=" table-view " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                          <i class="material-icons arrow_down">  keyboard_arrow_down</i>
                         </a>
                     </div>                   
                 </div>
