--- a/admin.html
+++ b/admin.html
@@ -233,7 +233,7 @@ current: index
               </p> -->
               <div class="collapse" id="collapseExample">
                 <div class="card-body d-flex justify-content-end">
-                    <input class="btn custom-btn-cancel btn-outline-danger mr-4" type="button" value="Deactivate">
+                    <input class="btn custom-btn-cancel btn-outline-danger mr-4" type="button" data-dismiss="modal" value="Deactivate">
                     <input class="btn custom-btn-success" type="submit" value="Edit">
                 </div>
               </div>   
@@ -353,7 +353,7 @@ current: index
           </form>
         </div>
         <div class="modal-footer border-top-0">
-          <input class="btn custom-btn-cancel btn-outline-success mr-4" type="button" value="Cancel">
+          <input class="btn custom-btn-cancel btn-outline-success mr-4" type="button" data-dismiss="modal" value="Cancel">
           <input class="btn custom-btn-success" type="submit" value="Add">
         </div>       
       </div>
@@ -482,7 +482,7 @@ current: index
         </div>
         
         <div class="modal-footer border-top-0">
-          <input class="btn custom-btn-cancel btn-outline-success mr-4" type="button" value="Cancel">
+          <input class="btn custom-btn-cancel btn-outline-success mr-4" type="button" data-dismiss="modal" value="Cancel">
           <input class="btn custom-btn-success" type="submit" value="Update">
         </div>       
       </div>
